--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -30,13 +30,13 @@ header .subheader { position: relative; top: -18px; }
 .typography h4,
 .typography h5 { font-family: "Helvetica Neue", "Helvetica", Arial, Verdana, sans-serif; }
 
-.gist .gist-file { border-radius: 3px; }
-.gist .gist-file .gist-data { background: #f9f9f9 !important; border-radius: 3px; }
-.gist-data pre { font-size: 13px; font-size: 1.3rem; line-height: 18px; }
-.gist .gist-file .gist-data { border-bottom: none !important; }
-.gist .gist-file .gist-meta { background: #fff !important; border: none !important; color: #ccc !important; padding-top: 11px !important; }
-.gist .gist-file .gist-meta a { color: #999 !important; }
-.gist .gist-file .gist-meta a:hover { text-decoration: underline; }
+//.gist .gist-file { border-radius: 3px; }
+//.gist .gist-file .gist-data { background: #f9f9f9 !important; border-radius: 3px; }
+//.gist-data pre { font-size: 13px; font-size: 1.3rem; line-height: 18px; }
+//.gist .gist-file .gist-data { border-bottom: none !important; }
+//.gist .gist-file .gist-meta { background: #fff !important; border: none !important; color: #ccc !important; padding-top: 11px !important; }
+//.gist .gist-file .gist-meta a { color: #999 !important; }
+//.gist .gist-file .gist-meta a:hover { text-decoration: underline; }
 
 .glyph { cursor: default; font-size: 16px; line-height: 1; font-family: "FoundationIconsGeneralEnclosed"; }
 .glyph.success { color: #5b8737; }
