added image assets and setup pjax for docs pages

--- a/app/views/docs/index/_sidebar.html.erb
+++ b/app/views/docs/index/_sidebar.html.erb
@@ -1,18 +1,18 @@
 <section id="sidebar" role="complementary">
 	<dl class="tabs vertical hide-on-phones">
-	  <%= active_link_to "Getting Started", docs_root_path, wrap_tag: :dd, active: :exclusive %>
-	  <%= active_link_to "CSS Version", docs_install_path, wrap_tag: :dd %>
-    <%= active_link_to "Gem Versions", docs_gem_install_path, wrap_tag: :dd %>
-		<%= active_link_to "The Grid", docs_grid_path, wrap_tag: :dd %>
-		<%= active_link_to "Typography", docs_typography_path, wrap_tag: :dd %>
-		<%= active_link_to "Buttons", docs_buttons_path, wrap_tag: :dd %>
-		<%= active_link_to "Forms", docs_forms_path, wrap_tag: :dd %>
-		<%= active_link_to "Navigation", docs_navigation_path, wrap_tag: :dd %>
-		<%= active_link_to "Tabs", docs_tabs_path, wrap_tag: :dd %>
-		<%= active_link_to "Elements", docs_elements_path, wrap_tag: :dd %>
-		<%= active_link_to "Orbit", docs_orbit_path, wrap_tag: :dd %>
-		<%= active_link_to "Reveal", docs_reveal_path, wrap_tag: :dd %>
-		<%= active_link_to "Javascripts", docs_javascripts_path, wrap_tag: :dd %>
-		<%= active_link_to "Support", docs_support_path, wrap_tag: :dd %>
+	  <%= active_link_to "Getting Started", docs_root_path, wrap_tag: :dd, active: :exclusive, class: "js-pjax" %>
+	  <%= active_link_to "CSS Version", docs_install_path, wrap_tag: :dd, class: "js-pjax" %>
+    <%= active_link_to "Gem Versions", docs_gem_install_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "The Grid", docs_grid_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Typography", docs_typography_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Buttons", docs_buttons_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Forms", docs_forms_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Navigation", docs_navigation_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Tabs", docs_tabs_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Elements", docs_elements_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Orbit", docs_orbit_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Reveal", docs_reveal_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Javascripts", docs_javascripts_path, wrap_tag: :dd, class: "js-pjax" %>
+		<%= active_link_to "Support", docs_support_path, wrap_tag: :dd, class: "js-pjax" %>
 	</dl>
 </section>
