--- a/app/views/docs/index/gem_install.html.erb
+++ b/app/views/docs/index/gem_install.html.erb
@@ -82,8 +82,12 @@
               <li><strong>$columnGutter:</strong> Width of the gutter.</li>
               <li><strong>$totalColumns:</strong> Adjust how many columns are in the grid.</li>
               <li><strong>$mobileTotalColumns:</strong> Adjust how many columns in the mobile grid.</li>
-            </ul>
-            <span class="btm-marg"><script src="https://gist.github.com/3008570.js?file=grid-settings"></script></span>
+            </ul>            
+            <pre><code data-language="css">// Grid Settings
+$rowWidth: 1000px;
+$columnGutter: 30px;
+$totalColumns: 12;
+$mobileTotalColumns: 4;</code></pre>
 
             <h5>Colors</h5>
             <ul class="disc">
@@ -98,7 +102,18 @@
               <li><strong>$shinyEdge:</strong> Adjust the shiny edge inner box-shadow of the buttons, etc.</li>
               <li><strong>$darkEdge:</strong> Adjust the dark edge inner box-shadow of buttons, etc.</li>
             </ul>
-            <span class="btm-marg"><script src="https://gist.github.com/3008672.js?file=color-settings.scss"></script></span>
+            <!-- <span class="btm-marg"><script src="https://gist.github.com/3008672.js?file=color-settings.scss"></script></span> -->
+            <pre><code data-language="css">// Colors Settings
+$mainColor: #2ba6cb;
+$secondaryColor: #e9e9e9;
+$alertColor: #c60f13;
+$successColor: #5da423;
+$txtColor: #222;
+$highlightColor: #ffff99;
+$black: #000;
+$white: #fff;
+$shinyEdge: rgba(#fff, .5);
+$darkEdge: rgba(#000, .2);</code></pre>
 
                           <h5>Button Settings</h5>
             <ul class="disc">
@@ -106,7 +121,12 @@
               <li><strong>$btnBase:</strong> Adjust the size of your buttons based on their top/bottom padding.</li>
               <li><strong>$[tiny, small, large]BtnBase:</strong> Adjust the ratio that your buttons scale by adjust this math.</li>
             </ul>
-            <span class="btm-marg"><script src="https://gist.github.com/3008701.js?file=button-settings.scss"></script></span>
+            <pre><code data-language="css">// Button Settings
+$buttonRadius: 3px;
+$btnBase: 10px;
+$tinyBtnBase: $btnBase - 5;
+$smallBtnBase: $btnBase - 3;
+$largeBtnBase: $btnBase + 5;</code></pre>
 
             <h5>Typography Settings <small>These require modular-scale, which comes with Foundation</small></h5>
             <ul class="disc">
@@ -120,7 +140,22 @@
               <li><strong>$baseFontSize:</strong> Change the base paragraph size for modular-scale.</li>
               <li><strong>$importantModNum:</strong> Change the important number for modular-scale.</li>
             </ul>
-            <span class="btm-marg"><script src="https://gist.github.com/3008761.js?file=type-settings.scss"></script></span>
+            <pre><code data-language="css">// Typography Settings
+
+$headerFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$headerFontWeight: bold;
+$headerFontColor: #222;
+$bodyFontFamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$bodyFontWeight: normal;
+$bodyFontColor: $txtColor;
+
+...
+
+// Modular Scale
+
+$ratio: $golden;
+$baseFontSize: 14px;
+$importantModNum: 44px;</code></pre>
 
             <h5>Other UI Settings</h5>
             <ul class="disc">
@@ -144,7 +179,32 @@
               <li><strong>$tooltipFontSizeScreenSmall:</strong> Font size for tooltips on mobile.</li>
               <li><strong>$tooltipBackgroundOpacityScreenSmall:</strong> Background opacity for tooltips on mobile.</li>
             </ul>
-            <span class="btm-marg"><script src="https://gist.github.com/3008766.js?file=ui-settings.scss"></script></span>
+            <pre><code data-language="css">// Form Settings
+$formSpacing: 12px;
+
+// Tab Settings
+$tabHeight: 40px;
+
+// Nav Bar Settings
+$navBarHeight: 40px;
+$navFlyoutBaseWidth: 250px;
+
+// Tooltip Settings
+$hasTipBorderBottom: dotted 1px #ccc;
+$hasTipFontWeight: bold;
+$hasTipFontColor: #333;
+$hasTipBorderBottomHover: dotted 1px darken($mainColor, 20%);
+$hasTipFontColorHover: $mainColor;
+$tooltipBackgroundColor: #000;
+$tooltipBackgroundOpacity: 0.85;
+$tooltipFontSize: 12;
+$tooltipFontWeight: bold;
+$tooltipFontColor: #fff;
+$tapToCloseFontSize: 10;
+$tapToCloseFontWeight: normal;
+$tapToCloseFontColor: #888;
+$tooltipFontSizeScreenSmall: 14;
+$tooltipBackgroundOpacityScreenSmall: 0.85;</code></pre>
 
             <hr>
 
@@ -155,11 +215,14 @@
 
             <h5>Basic Import (The Kitchen Sink)</h5>
             <p>By default, these settings are uncommented which included all of Foundation. You will always want to keep your settings uncommented, but you can uncomment the second import when you are customizing.</p>
-            <script src="https://gist.github.com/3174606.js?file=app1.scss"></script>
+            <pre><code data-language="css">// You custom settings file to override Foundation defaults
+@import "settings";
+
+// Comment out this import if you are customizing you imports below
+@import "foundation";</code></pre>
 
             <h5>Customizing Your Imports</h5>
             <p>When you are customizing, you must always include this set of files to ensure proper behavior.</p>
-            <script src="https://gist.github.com/3174610.js?file=app2.scss"></script>
             <pre><code data-language="css">// ----------------------------------------
 // Import specific parts of Foundation by commenting the import "foundation"
 // and uncommenting what you want below. You must uncomment the following if customizing
@@ -171,10 +234,35 @@
 // @import "foundation/mixins/clearfix";</code></pre>
 
             <p>The next bit of code controls which common elements get included. Certain elements will throw an error to let you know if they rely on a mixin you haven't included.</p>
-            <script src="https://gist.github.com/3174615.js?file=app3.scss"></script>
+            <pre><code data-language="css">// Control which mixins you have access too
+
+// @import "foundation/mixins/css-triangle";
+// @import "foundation/mixins/font-size";
+
+// Must include next three for semantic grid to work
+
+// @import "foundation/mixins/respond-to";
+// @import "foundation/mixins/semantic-grid";
+
+// Must include the grid for any responsiveness
+
+// @import "foundation/components/grid";
+
+// Control which common styles get compiled
+
+// @import "foundation/common/typography";
+// @import "foundation/common/forms";</code></pre>
 
             <p>Finally, you can control which components are compiled at the top of your app.css file by uncommenting what you desire.</p>
-            <script src="https://gist.github.com/3174617.js?file=app4.scss"></script>
+            <pre><code data-language="css">// Control which components you get if customizing
+
+// @import "foundation/components/modules/buttons";
+// @import "foundation/components/modules/tabs";
+// @import "foundation/components/modules/ui";
+// @import "foundation/components/modules/navbar";
+// @import "foundation/components/modules/orbit";
+// @import "foundation/components/modules/reveal";
+// @import "foundation/components/modules/offcanvas";</code></pre>
 
             <p><strong>Note: Watch for Compass to throw errors to let you know what you aren't including.</strong></p>
             <hr>
@@ -202,11 +290,28 @@
             </ul>
             <span>
               <strong>Markup Example:</strong>
-              <script src="https://gist.github.com/3009003.js?file=example.html"></script>
+              <pre><code data-language="html"><header>
+  <aside></aside>
+  <section>
+    <article>
+      <header></header>
+      <div></div>
+    </article>
+  </section>
+</header></code></pre>
             </span>
             <span class="btm-marg">
               <strong>SCSS Example:</strong>
-              <script src="https://gist.github.com/3009035.js?file=semantic-grid.scss"></script>
+              <pre><code data-language="css">header { @include outerRow();
+  aside { @include column(4); }
+  section { @include column(8); 
+    article { @include innerRow();
+      header { @include column(2);
+               mid-width: 0; }
+      div { @include column(10); }
+    }
+  }
+}</code></pre>
             </span>
 
             <h5>Modular Scale</h5>
@@ -214,7 +319,9 @@
             <ul class="disc">
               <li><strong>ms(#);</strong> Tell your font which number from the scale to use.</li>
             </ul>
-            <span class="btm-marg"><script src="https://gist.github.com/3009164.js?file=modular-scale.scss"></script></span>
+            <pre><code data-language="css">.element {
+  font-size: ms(0); /* 0 = first in scale, 1,2,3 and so on... */
+}</code></pre>
 
             <h5>Font Size</h5>
             <p>If you feel like breaking out of the modular scale or not using the provided function, you can use our font-size mixin!</p>
@@ -257,11 +364,24 @@
             <h4>Gemfile</h4>
             <p>First you'll want to add the following gems to the <strong>assets</strong> group in your Gemfile like so:</p>
 
-            <script src="https://gist.github.com/3036269.js?file=Gemfile"></script>
+            <pre><code data-language="ruby">group :assets do
+  gem 'sass-rails',   '~> 3.2.3'
+  gem 'coffee-rails', '~> 3.2.1'
+
+  # Add these gems
+  gem 'compass-rails', '~> 1.0.3'
+  gem 'zurb-foundation', '~> 3.0.9'
+end</code></pre>
 
             <p>Then run <strong>bundle install</strong> to install these gems.  You may see the following error:</p>
 
-            <script src="https://gist.github.com/3036269.js?file=bundle_install_error"></script>
+            <pre><code data-language="shell">Bundler could not find compatible versions for gem "sass":
+In snapshot (Gemfile.lock):
+  sass (3.1.20)
+
+In Gemfile:
+  zurb-foundation (~> 3.0.0) ruby depends on
+    sass (= 3.2.0.alpha.244) ruby</code></pre>
 
             <p>If you see that don't panic, just run <strong>bundle update sass</strong> and you should be on your merry way!</p>
 
@@ -286,25 +406,32 @@
             <h5>Layout</h5>
             <p>Add the following to the <strong>&lt;head&gt;</strong> tag of your page layouts (i.e. <strong>app/views/layouts/application.html.erb</strong>) to set the viewport width for mobile devices.</p>
 
-            <script src="https://gist.github.com/3036269.js?file=application.html.erb"></script>
+            <pre><code data-language="html"><!-- 
+Place this in <head></head>
+Set the viewport width to device width for mobile
+-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" /></code></pre>
 
             <h5>SASS Files</h5>
             <p>Since Foundation is now SASSified you'll need to include it a little differently.  If you're using a standard Rails installation you should rename <strong>application.css</strong> to <strong>application.scss</strong> in the <strong>app/assets/stylesheets</strong> directory.</p>
 
-            <script src="https://gist.github.com/3036269.js?file=application.scss"></script>
+            <pre><code data-language="css">@import "foundation";</code></pre>
 
             <p>That will import all the foundation related styles into your application.  Take a look at the other documentation pages if you'd like to further customize the stylesheet that gets generated.</p>
 
             <h5>Javascripts</h5>
             <p>To include all the Foundation related javascripts on your page add <strong>=require foundation</strong> to your <strong>app/assets/javascripts/application.js</strong> sprockets manifest file.</p>
-            <script src="https://gist.github.com/3036269.js?file=application.js"></script>
+            <pre><code data-language="javascript">//= require foundation
+//= require foundation/app</code></pre>
 
             <a name="upgrading"></a>
             <h4>Upgrading from 2.X</h4>
 
             <p>For those of you upgrading from a previous version of the gem things are a little different.  In your <strong>app/assets/stylesheets/application.css</strong> you probably had a bit of code like this:</p>
 
-            <script src="https://gist.github.com/3036269.js?file=old_application.css"></script>
+            <pre><code data-language="css">/*
+=require foundation
+*/</code></pre>
 
             <p>Just rename <strong>application.css</strong> to <strong>application.scss</strong> making sure to replace any <strong>=require</strong> to the sass <strong>@import</strong> syntax.</p>
 
