--- a/app/views/docs/index/orbit.html.erb
+++ b/app/views/docs/index/orbit.html.erb
@@ -6,9 +6,9 @@
   			<h4 class="subheader">Orbit is an easy to use, powerful image slider built to be responsive, just like Foundation.</h4>
 
         <div id="featured">
-          <img src="../images/orbit-demo/demo1.jpg" />
-          <img src="../images/orbit-demo/demo2.jpg" />
-          <img src="../images/orbit-demo/demo3.jpg" />
+          <%= image_tag "orbit-demo/demo1.jpg" %>
+          <%= image_tag "orbit-demo/demo2.jpg" %>
+          <%= image_tag "orbit-demo/demo3.jpg" %>
         </div>
 
 				<h4>Getting Started</h4>
@@ -86,3 +86,7 @@
 
 	<%= render "sidebar" %>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+  $("#featured").orbit();
+</script>
