updated docs pages to use Rainbow js syntax highlighter

--- a/app/views/docs/index/gem_install.html.erb
+++ b/app/views/docs/index/gem_install.html.erb
@@ -440,7 +440,7 @@ Set the viewport width to device width for mobile
 
       </div>
       <div class="four columns">
-        <? include("includes/_download.php"); ?>
+        <%= render "download" %>
       </div>
     </div>
   </section>
