--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -7,6 +7,7 @@
    Foundation-specific presentation CSS
 ----------------------------------------- */
 
+code.rainbow {font-weight:300;}
 
 body { padding-bottom: 60px; }
 .row { width: 1440px; }
