--- a/app/views/docs/index/buttons.html.erb
+++ b/app/views/docs/index/buttons.html.erb
@@ -7,7 +7,9 @@
 
 				<p>Foundation buttons have a number of parameters and styles &mdash; you can see a few examples below. The out of the box classes include size, type (color) and style (square, slightly rounded, and completely rounded).</p>
 
-				<script src="https://gist.github.com/2969496.js?file=f3-buttons.html"></script>
+				<pre><code data-language="html"><a href="#" class="[tiny, small, medium, large] button">Button Text</a>
+<a href="#" class="[radius, round] button">Button Text</a>
+<a href="#" class="[success, alert, secondary] button">Button Text</a></code></pre>
 
 				<div class="row">
 					<div class="six columns">
@@ -55,7 +57,11 @@
           <li><a href="#" class="button radius">Button 3</a></li>
         </ul>
 
-        <script src="https://gist.github.com/2978952.js?file=f3-button-group.html"></script>
+        <pre><code data-language="html"><ul class="button-group [radius, rounded]">
+  <li><a href="#" class="button radius">Button 1</a></li>
+  <li><a href="#" class="button radius">Button 2</a></li>
+  <li><a href="#" class="button radius">Button 3</a></li>
+</ul></code></pre>
 
         <h5>Even Button Groups</h5>
         <p>If you want a button group to fill a grid column with evenly sized actions, you can simply add two classes to the group: <code>.even</code> and either <code>.two-up</code>, <code>.three-up</code>, <code>.four-up</code>, or <code>.five-up</code>.
@@ -66,7 +72,11 @@
           <li><a href="#" class="button">Button 3</a></li>
         </ul>
 
-        <script src="https://gist.github.com/2978962.js?file=f3-button-grou-even.html"></script>
+        <pre><code data-language="html"><ul class="button-group even three-up">
+  <li><a href="#" class="button">Button 1</a></li>
+  <li><a href="#" class="button">Button 2</a></li>
+  <li><a href="#" class="button">Button 3</a></li>
+</ul></code></pre>
 
         <h5>Button Bars</h5>
         <p>A button bar is a group of button groups (I N C E P T I O N), perfect for situations where you want groups of actions that are all related to a similar element or page. Simply wrap two or more button groups in a <code>div.button-bar</code> and Foundation takes care of the rest.</p>
@@ -85,7 +95,19 @@
           </ul>
         </div>
 
-        <script src="https://gist.github.com/2978972.js?file=f3-button-bar.html"></script>
+        <pre><code data-language="html"><div class="button-bar">
+  <ul class="button-group">
+    <li><a href="#" class="button">Button 1</a></li>
+    <li><a href="#" class="button">Button 2</a></li>
+    <li><a href="#" class="button">Button 3</a></li>
+  </ul>
+
+  <ul class="button-group">
+    <li><a href="#" class="button">Button 1</a></li>
+    <li><a href="#" class="button">Button 2</a></li>
+    <li><a href="#" class="button">Button 3</a></li>
+  </ul>
+</div></code></pre>
 
         <p>Buttons within groups or bars can also be individually set to a particular type (color) or size. Obviously if you create a button bar with different sized buttons the visual presentation may suffer a bit, but we wanted these to be very flexible.</p>
 
@@ -121,7 +143,15 @@
         
         <p>If you need your dropdown to go up, simple add a class of <code>.up</code> to <code>.button.dropdown</code>.</p>
 
-        <script src="https://gist.github.com/2978975.js?file=f3-dropdown-button.html"></script>
+        <pre><code data-language="html"><div href="#" class="large button dropdown">
+  Dropdown Button
+  <ul>
+    <li><a href="#">Dropdown Item</a></li>
+    <li><a href="#">Another Dropdown Item</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Last Item</a></li>
+  </ul>
+</div></code></pre>
 
         <h5>Split Button</h5>
         <p>Split buttons in turn use similar classes, and a different structure than regular or dropdown buttons.</p>
@@ -139,14 +169,23 @@
           </div>
         </p>
 
-        <script src="https://gist.github.com/2978979.js?file=f3-split-button.html"></script>
+        <pre><code data-language="html"><div href="#" class="large alert button split dropdown">
+  <a href="#">Split Button</a>
+  <span></span>
+  <ul>
+    <li><a href="#">Dropdown Item</a></li>
+    <li><a href="#">Another Dropdown Item</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Last Item</a></li>
+  </ul>
+</div></code></pre>
 
         <p>Notice that in a split button, the <code>span</code> is the dropdown affordance and the main anchor is the primary button action.</p>
 
 
   		</div>
   		<div class="four columns">
-  		  <? include("includes/_download.php"); ?>
+  		  <%= render "download" %>
   		</div>
     </div>
 	</section>
