--- a/app/views/docs/index/home.html.erb
+++ b/app/views/docs/index/home.html.erb
@@ -59,7 +59,7 @@
   			</div>
   		</div>
   		<div class="four columns">
-  		  <? include("includes/_download.php"); ?>
+  		  <%= render "download" %>
   		</div>
     </div>
 	</section>
