--- a/app/views/docs/index/install.html.erb
+++ b/app/views/docs/index/install.html.erb
@@ -26,7 +26,7 @@
 				
   		</div>
   		<div class="four columns">
-  		  <? include("includes/_download.php"); ?>
+  		  <%= render "download" %>
   		</div>
     </div>
 	</section>
