--- a/app/views/docs/index/navigation.html.erb
+++ b/app/views/docs/index/navigation.html.erb
@@ -205,7 +205,7 @@
 
   		</div>
   		<div class="four columns">
-  		  <? include("includes/_download.php"); ?>
+  		  <%= render "download" %>
   		</div>
     </div>
 	</section>
