--- a/app/views/layouts/docs/application.html.erb
+++ b/app/views/layouts/docs/application.html.erb
@@ -29,7 +29,7 @@
     $.pjax.defaults.timeout = false;
     <% end %>
     // Only some pages should use PJAX
-    $('.js-pjax a').pjax('[data-pjax-container]');
+    // $('.js-pjax a').pjax('[data-pjax-container]');
 	</script>
   
   <%= csrf_meta_tags %>
