updated gists with rainbow, hiding code until it has been highlighted

--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -8,6 +8,7 @@
 ----------------------------------------- */
 
 code.rainbow {font-weight:300;}
+pre {display:none;}
 
 body { padding-bottom: 60px; }
 .row { width: 1440px; }
