--- a/app/views/docs/index/forms.html.erb
+++ b/app/views/docs/index/forms.html.erb
@@ -350,7 +350,7 @@
 					  <h5>JavaScript Dependency</h5>
 					  <p>The <strong>jquery.foundation.forms.js</strong> is required to make these custom elements work.  Once included it can be initialized like so:</p>
 
-            <pre><code data-language="js">$(document).foundationCustomForms();</code></pre>
+            <pre><code data-language="javascript">$(document).foundationCustomForms();</code></pre>
             
             <p>Once initialized it will look for any checkbox, radio button, or select element and replace it with custom markup that Foundation provides styles for. It will even correctly respect and apply default states for radio, checkbox and select elements. You can use the "checked" or "selected" properties just like normal.</p>
             
@@ -380,7 +380,7 @@
   <option>Pick One</option>
 </select></code></pre>
             
-            <pre><code data-language="js">// When something changes
+            <pre><code data-language="javascript">// When something changes
 $("#changedSelectInput").foundationCustomForms();</code></pre>
             
 					</div>
