--- a/app/views/docs/index/tabs.html.erb
+++ b/app/views/docs/index/tabs.html.erb
@@ -11,7 +11,7 @@
 				  <h5>JavaScript Dependency</h5>
 				  <p>The <strong>jquery.foundation.tabs.js</strong> is required to make the tabs work.  Once included it can be initialized like so:</p>
 				  
-				  <script src="https://gist.github.com/3316683.js?file=initialize.js"></script>
+				  <pre><code data-language="javascript">$(document).foundationTabs();</code></pre>
 				  
 				</div>
 
@@ -32,7 +32,17 @@
 					<li id="simple3Tab">This is simple tab 3's content. It's only okay.</li>
 				</ul>
 
-				<script src="https://gist.github.com/2984312.js?file=f3-simple-tabs.html"></script>
+				<pre><code data-language="html"><dl class="tabs">
+  <dd class="active"><a href="#simple1">Simple Tab 1</a></dd>
+  <dd><a href="#simple2">Simple Tab 2</a></dd>
+  <dd><a href="#simple3">Simple Tab 3</a></dd>
+</dl>
+
+<ul class="tabs-content">
+  <li class="active" id="simple1Tab">This is simple tab 1's content. Pretty neat, huh?</li>
+  <li id="simple2Tab">This is simple tab 2's content. Now you see it!</li>
+  <li id="simple3Tab">This is simple tab 3's content. It's, you know...okay.</li>
+</ul></code></pre>
 
 				<hr />
 
@@ -53,7 +63,11 @@
 					<dd><a href="#evenTab8">Tab 8</a></dd>
 				</dl>
 
-				<script src="https://gist.github.com/2984315.js?file=f3-even-tabs.html"></script>
+				<pre><code data-language="html"><dl class="tabs three-up">
+  <dd class="active"><a href="#evenTab1">Even Tab 1</a></dd>
+  <dd><a href="#evenTab2">Even Tab 2</a></dd>
+  <dd><a href="#evenTab3">Even Tab 3</a></dd>
+</dl></code></pre>
 
 				<hr />
 
@@ -75,7 +89,18 @@
         	<li id="simpleContained3Tab">This is simple tab 3's content. It's only okay.</li>
         </ul>
 
-				<script src="https://gist.github.com/2984321.js?file=f3-contained-tabs.html"></script>
+				<pre><code data-language="html"><dl class="tabs contained">
+  <dt>Title 1</dt>
+  <dd class="active"><a href="#simpleContained1">Simple Tab 1</a></dd>
+  <dd><a href="#simpleContained2">Simple Tab 2</a></dd>
+  <dt>Title 1</dt>
+  <dd class="hide-on-phones"><a href="#simpleContained3">Simple Tab 3</a></dd>
+</dl>
+<ul class="tabs-content contained">
+  <li class="active" id="simpleContained1Tab">This is simple tab 1's content. Pretty neat, huh?</li>
+  <li id="simpleContained2Tab">This is simple tab 2's content. Now you see it!</li>
+  <li id="simpleContained3Tab">This is simple tab 3's content. It's only okay.</li>
+</ul></code></pre>
 
 				<hr />
 
@@ -88,7 +113,11 @@
         	<dd class="hide-for-small"><a href="#pillTab3">Pill Tab 3</a></dd>
         </dl>
 
-				<script src="https://gist.github.com/3000706.js?file=f3-pill-tabs.html"></script>
+				<pre><code data-language="html"><dl class="tabs pill">
+  <dd class="active"><a href="#pillTab1">Pill Tab 1</a></dd>
+  <dd><a href="#pillTab2">Pill Tab 2</a></dd>
+  <dd><a href="#pillTab3">Pill Tab 3</a></dd>
+</dl></code></pre>
 
 				<hr />
 
@@ -101,7 +130,11 @@
         	<dd><a href="#vertical3">Vertical Tab 3</a></dd>
         </dl>
 
-				<script src="https://gist.github.com/2984322.js?file=f3-vertical-tabs.html"></script>
+				<pre><code data-language="html"><dl class="nice vertical tabs">
+  <dd class="active"><a href="#vertical1">Vertical Tab 1</a></dd>
+  <dd><a href="#vertical2">Vertical Tab 2</a></dd>
+  <dd><a href="#vertical3">Vertical Tab 3</a></dd>
+</dl></code></pre>
 
 				<hr />
 
