--- a/app/views/layouts/docs/application.html.erb
+++ b/app/views/layouts/docs/application.html.erb
@@ -30,6 +30,9 @@
     <% end %>
     // Only some pages should use PJAX
     // $('.js-pjax a').pjax('[data-pjax-container]');
+    Rainbow.onHighlight(function(block, language){
+      $(block).parent('pre').show();
+    });
 	</script>
   
   <%= csrf_meta_tags %>
